# py-kube-downscaler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  Dockerfile  Makefile  README.md  SECURITY_REVIEW.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: coverage-report.yml  docker-build.yml  end2end.yml  helm-build.yml  prune.yml  python-tests.yml  tag-expire.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml
deploy/: deployment.yaml  rbac.yaml
kube_downscaler/: __init__.py  cmd.py  helper.py  main.py  scaler.py  tokenbucket.py
kube_downscaler/resources/: autoscalingrunnerset.py  constraint.py  constrainttemplate.py  kafkaconnect.py  keda.py  policy.py  rollout.py  stack.py
tests/: test_api_throttling_retries.py  test_autoscale_resource.py  test_cmd.py  test_events.py  test_grace_period.py  test_ignore_if_labels_dont_match.py  test_main.py  test_resources.py  test_scaler.py
